# ai-agents-apps-lc-lg-mcp

./: .gitignore  README.md  main.py  pyproject.toml
chapters/ch01_intro_ai_agents/: langchain_fundamentals.py
chapters/ch02_executing_prompts_programmatically/: executing_prompt_prog.py
chapters/ch03_summarizing_text_using_langchain/: summarizing_text_using_langhain.py
chapters/ch04_research_summarization_engine/: research_summarization_engine.py
chapters/ch05_agentic_workflows_with_langgraph/: agentic_workflows_with_langgraph.py
chapters/ch06_rag_fundamentals_with_chromadb/: chromadb-ingestion-and-querying.py
