[project]
name = "ai-agents-apps-lc-lg-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "ddgs>=9.12.0",
    "docx2txt>=0.9",
    "duckduckgo-search>=8.1.1",
    "graphviz>=0.21",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.12",
    "marimo>=0.21.1",
    "openai>=2.30.0",
    "pypdf>=6.9.2",
    "requests>=2.33.0",
    "ruff>=0.15.8",
    "tiktoken>=0.12.0",
    "wikipedia>=1.4.0",
]
